--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Sketch</title>
+    <title> SydneyRailBroadway </title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -14,7 +14,11 @@
   </head>
 
   <body>
+    <script src="railMap.js"></script>
+    <script src="mondrianTown.js"></script>
+    <script src="carAnimation.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
+
 
