--- a/1SydneyRailBroadway.html
+++ b/1SydneyRailBroadway.html
@@ -17,7 +17,7 @@
     <script src="2RailMap.js"></script>
     <script src="3MondrianTown.js"></script>
     <script src="4CarAnimation.js"></script>
-    <script src="5sketch.js"></script>
+    <script src="5Sketch.js"></script>
   </body>
 </html>
 
